Do: => Added function with CurrencyFormat.

--- a/main/src/index.html
+++ b/main/src/index.html
@@ -26,7 +26,7 @@
                 <div class="row">
                     <div class="col-1">
                         <label class="label" for="valor">Valor</label>
-                        <input class="input-white-theme" type="text" id="valor" placeholder="0,00" oninput="onlyNumbers('valor')" required>
+                        <input class="input-white-theme" datatype="currencyFormat" type="text" id="valor" placeholder="0,00" oninput="onlyNumbers('valor')" onchange="currencyFormat()" required>
                         <span>Valor recebido</span>
                     </div>
                 </div>
